# esp32-s3-pipecat

./: README.md
esp32-s3-box-3/src/: CMakeLists.txt  main.cpp  main.h  screen.cpp
